# DistGER-Pipe

./: .gitignore  CMakeLists.txt  README.md  distger.cmake  scripts
include/: dsgl.hpp  graph.hpp  option_helper.hpp  path.hpp  walk.hpp
src/: CMakeLists.txt
src/examples/: huge_walk.cpp
src/tests/: CMakeLists.txt
src/tools/: mpgp.cpp  relabel.cpp
